--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
 
 	<!-- title -->
-	<title>El Gaucho Comelon - About</title>
+	<title>Acerca de</title>
 
 	<!-- favicon -->
 	<link  rel="icon" href="./assets/img/favicon.ico" type="image/png">
@@ -48,13 +48,6 @@
 			<div class="row">
 				<div class="col-lg-12 col-sm-12 text-center">
 					<div class="main-menu-wrap">
-						<!-- logo -->
-						<!-- <div class="site-logo">
-							<a href="index.html">
-								<img src="assets/img/logo.png" alt="">
-							</a>
-						</div> -->
-						<!-- logo -->
 
 						<!-- menu start -->
 						<nav class="main-menu">
@@ -102,7 +95,13 @@
 					<div class="featured-text">
 						<h2 class="pb-3">Gaucho <span class="orange-text">Comelón</span></h2>
 						<div class="row">
-
+							<!-- Info goes here -->
+							<p>
+								“El Gaucho Comelón”, es una empresa dedicada a la venta de chimichurri tradicional y con chile de árbol, el cual brinda sus servicios con la finalidad de satisfacer las necesidades de sus clientes, contando además con envíos a diferentes zonas del país, asegurando calidad, sabor y frescura. 
+							</p>
+							<p>
+								Somos una pequeña empresa familiar llamada el Gaucho Comelón, donde se hace chimichurri argentino tradicional y con chile de árbol, nuestra idea es crecer e incursionar en el mercado, como en supermercados.
+							</p>
 						</div>
 					</div>
 				</div>
@@ -165,7 +164,7 @@
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box pages">
-						<h2 class="widget-title">Pages</h2>
+						<h2 class="widget-title">Secciones</h2>
 						<ul>
 							<li><a href="index.html">Inicio</a></li>
 							<li><a href="about.html">Acerca de</a></li>
@@ -182,6 +181,15 @@
 							<li>###################</li>
 							<li>###################</li>
 						</ul>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6">
+					<div class="footer-box get-in-touch">
+						<!-- google map section -->
+						<div class=" embed-responsive-21by9">
+							<iframe height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=san%20jose&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+						</div>
+						<!-- end google map section -->
 					</div>
 				</div>
 			</div>
