--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
 
 	<!-- title -->
-	<title>El Gaucho Comelon - Inicio</title>
+	<title>Inicio</title>
 
 	<!-- favicon -->
 	<link  rel="icon" href="./assets/img/favicon.ico" type="image/png">
@@ -48,13 +48,6 @@
 			<div class="row">
 				<div class="col-lg-12 col-sm-12 text-center">
 					<div class="main-menu-wrap">
-						<!-- logo -->
-						<!-- <div class="site-logo">
-							<a href="index.html">
-								<img src="assets/img/logo.png" alt="">
-							</a>
-						</div> -->
-						<!-- logo -->
 
 						<!-- menu start -->
 						<nav class="main-menu">
@@ -185,7 +178,6 @@
 					<div class="testimonial-sliders">
 						<div class="single-testimonial-slider">
 							<div class="client-avater">
-								<img src="assets/img/avaters/avatar2.png" alt="">
 							</div>
 							<div class="client-meta">
 								<h3>Visión</h3>
@@ -199,7 +191,6 @@
 						</div>
 						<div class="single-testimonial-slider">
 							<div class="client-avater">
-								<img src="assets/img/avaters/avatar3.png" alt="">
 							</div>
 							<div class="client-meta">
 								<h3>Misión</h3>
@@ -318,6 +309,15 @@
 							<li>###################</li>
 							<li>###################</li>
 						</ul>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6">
+					<div class="footer-box get-in-touch">
+						<!-- google map section -->
+						<div class=" embed-responsive-21by9">
+							<iframe height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=san%20jose&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+						</div>
+						<!-- end google map section -->
 					</div>
 				</div>
 			</div>
