--- a/about.html
+++ b/about.html
@@ -55,14 +55,16 @@
 								<li><a href="index.html">Inicio</a>
 								</li>
 								<li class="current-list-item"><a href="about.html">Acerca de</a></li>
-								<li><a href="news.html">Producto</a>
+								<li><a href="news.html">Productos</a></li>
+								<li><a href="404.html">Comprar</a>
 								</li>
-								<li><a href="contact.html">Contacto</a></li>
 								<li>
+									<div class="header-icons">
+										<a class="shopping-cart" href="404.html"><i class="fas fa-shopping-cart"></i></a>
+									</div>
 								</li>
 							</ul>
 						</nav>
-						<a class="mobile-show search-bar-icon" href="#"><i class="fas fa-search"></i></a>
 						<div class="mobile-menu"></div>
 						<!-- menu end -->
 					</div>
@@ -97,10 +99,10 @@
 						<div class="row">
 							<!-- Info goes here -->
 							<p>
-								“El Gaucho Comelón”, es una empresa dedicada a la venta de chimichurri tradicional y con chile de árbol, el cual brinda sus servicios con la finalidad de satisfacer las necesidades de sus clientes, contando además con envíos a diferentes zonas del país, asegurando calidad, sabor y frescura. 
+								“El Gaucho Comelón”, es una empresa dedicada a la venta de chimichurri tradicional y con chile de árbol, el cual brinda sus servicios con la finalidad de satisfacer las necesidades de sus clientes, contando además con envíos a diferentes zonas del país, asegurando calidad, sabor y frescura. Esta nace por el gusto a los cortes de carne con chimirruchi argentino, lo que normalmente estos se consiguen con preservantes y vinagre, y se quería buscar una opción más natural y saludable.
 							</p>
 							<p>
-								Somos una pequeña empresa familiar llamada el Gaucho Comelón, donde se hace chimichurri argentino tradicional y con chile de árbol, nuestra idea es crecer e incursionar en el mercado, como en supermercados.
+								Además estamos creando nuevos productos, como salsa picante con maracuyá y salsa picante con chile panameño, donde buscamos actividades como eventos y ferias para que las personas degusten los productos y concretar la venta.
 							</p>
 						</div>
 					</div>
@@ -109,6 +111,63 @@
 		</div>
 	</div>
 	<!-- end featured section -->
+
+	<!-- FODA -->
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-4 col-md-6">
+				<div class="single-latest-news">
+					<div class="news-text-box">
+						<h3><a href="single-news.html">Fortalezas</a></h3>
+						<ul>
+							<li>Buena calidad</li>
+							<li>Precios competitivos</li>
+							<li>Puntualidad</li>
+							<br>
+							<br>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<div class="single-latest-news">
+					<div class="news-text-box">
+						<h3><a href="single-news.html">Oportunidades</a></h3>
+						<ul>
+							<li>Puede ser un producto muy comercializado.</li>
+							<li>Los consumidores que no conocían el producto están dispuestos a probar nuestros productos.</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<div class="single-latest-news">
+					<div class="news-text-box">
+						<h3><a href="single-news.html">Debilidades</a></h3>
+						<ul>
+							<li>Perecedero</li>
+							<li>Es un producto contraindicaciones.</li>
+							<li>Es un producto que no les gusta a muchas personas.</li>
+							<br>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<div class="single-latest-news">
+					<div class="news-text-box">
+						<h3><a href="single-news.html">Amenazas</a></h3>
+						<ul>
+							<li>Falta de proovedores.</li>
+							<li>Posicionamiento de otra empresa con el mismo producto.</li>
+							<br>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end FODA -->
 
 	<!-- testimonail-section -->
 	<div class="testimonail-section mt-80 mb-150">
