--- a/index.html
+++ b/index.html
@@ -55,14 +55,16 @@
 								<li class="current-list-item"><a href="index.html">Inicio</a>
 								</li>
 								<li><a href="about.html">Acerca de</a></li>
-								<li><a href="news.html">Producto</a>
+								<li><a href="news.html">Productos</a></li>
+								<li><a href="404.html">Comprar</a>
 								</li>
-								<li><a href="contact.html">Contacto</a></li>
 								<li>
+									<div class="header-icons">
+										<a class="shopping-cart" href="404.html"><i class="fas fa-shopping-cart"></i></a>
+									</div>
 								</li>
 							</ul>
 						</nav>
-						<a class="mobile-show search-bar-icon" href="#"><i class="fas fa-search"></i></a>
 						<div class="mobile-menu"></div>
 						<!-- menu end -->
 					</div>
