--- a/404.html
+++ b/404.html
@@ -97,7 +97,7 @@
 						<div class="error-text">
 							<i class="far fa-sad-cry"></i>
 							<h1>Oops! Not Found.</h1>
-							<p>The page you requested for is not found.</p>
+							<p>We're working on it, isn't available right now.</p>
 							<a href="index.html" class="boxed-btn">Volver al inicio</a>
 						</div>
 					</div>
