--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 								<li><a href="index.html">Inicio</a>
 								</li>
 								<li class="current-list-item"><a href="about.html">Acerca de</a></li>
-								<li><a href="news.html">Productos</a></li>
+								<li><a href="404.html">Productos</a></li>
 								<li><a href="404.html">Comprar</a>
 								</li>
 								<li>
