--- a/404.html
+++ b/404.html
@@ -137,9 +137,15 @@
 					<div class="footer-box get-in-touch">
 						<h2 class="widget-title">Referencias</h2>
 						<ul>
-							<li>###################</li>
-							<li>###################</li>
-							<li>###################</li>
+							<li>Lázaro, E. J. (2015). Tu business plan ¡en un pim pam!. Recuperado de:  http://ebookcentral.proquest.com/lib/bibliotecauamsp/reader.action?docID=4570153</li>
+							<li>Betancourt, D. (2017, septiembre 29). Modelo EOQ: Variantes, ejemplos y plantillas en Excel. Ingenio Empresa.</li>
+							<li>https://www.ingenioempresa.com/modelo-de-cantidad-economica-eoq/</li>
+							<li>Hiltz, J. (s/f). Formularios de Google: Herramienta de creación de formularios en línea para empresas. Google.com. Recuperado de: 
+								https://workspace.google.com/intl/es-419/products/forms/?utm_source=google&utm_medium=cpc&utm_campaign=latam-CR-all-es-dr-bkws-all-all-trial-e-dr-1011272-LUAC0012130&utm_content=text-ad-none-any-DEV_c-CRE_479486418464-ADGP_Hybrid%20%7C%20BKWS%20-%20EXA%20%7C%20Txt%20~%20Forms-KWID_43700057707452301-kwd-62528116084&utm_term=KW_form%20google-ST_form%20google&gclid=CjwKCAjwtIaVBhBkEiwAsr7-c47PiYj2624ntrSzH2stS5DSdwT-QhptMmWdyxwziTg6PSmXoPsjIBoCEcMQAvD_BwE&gclsrc=aw.ds 
+							</li>
+							<li>Ciclo de Deming: ejemplos, etapas, importancia, ventajas y desventajas. (s/f). Beetrack.com. Recuperado de: 
+								https://www.beetrack.com/es/blog/ciclo-de-deming-etapas-ejemplos 
+							</li>
 						</ul>
 					</div>
 				</div>
