--- a/index.html
+++ b/index.html
@@ -322,9 +322,9 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box get-in-touch">
 						<!-- google map section -->
-						<div class=" embed-responsive-21by9">
+						<!-- <div class=" embed-responsive-21by9">
 							<iframe height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=san%20jose&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-						</div>
+						</div> -->
 						<!-- end google map section -->
 					</div>
 				</div>
